# BioExploration

./: CMakeLists.txt  README.md  bio_visualizations.ipynb  driver.cpp
include/: SSTAnalysis.h  geneML.h  sequencePhylogeny.h
input_files/: myoglobin.fasta  noaa_oni_values.csv
output_files/: confusion_matrix.csv  kmeans_assignments.csv  output_scores.csv
src/: SSTAnalysis.cpp  geneML.cpp  sequencePhylogeny.cpp
